Test/irondafny0/opened_workaround.dfy.expect
opened_workaround.dfy(6,14): Error: Function A._default.P has no body. Add the {:axiom} attribute to it to suppress this warning
1 resolution/type errors detected in opened_workaround.dfy
